
Bindle Binaries Objective-C Kit  
Copyright (C) 2013 Bindle Binaries <syzdek@bindlebinaries.com>.

#### Devel
   - Adding BKLogger class. (syzdek)

#### 0.3   (2013-01-24)
   - Adding copyright information to BKNetTest. (syzdek)
   - Updating icon file names for examples. (syzdek)
   - Adding BKPosixRegex class. (syzdek)
   - Adding BKPosixRegmatch class. (syzdek)
   - Adding Xcode target for building and installing documentation
     docsets. (syzdek)
   - Updating accompanying text files to use _markdown_ syntax. (syzdek)
   - Updating git-package-version.sh to be more robust. (syzdek)
   - Enabling Automatic Reference Counting on all targets. (syzdek)

#### 0.2   (2012-03-17)
   - Fixing BKCatalog example. (syzdek)
   - Updating BKSplitViewController to use -(void)addChildViewController:
     to set the parent/child relationships in view controllers. (syzdek)
   - Updating Xcode project with Xcode modernize. (syzdek)
   - Fixing warning generated from UIPopoverController due to use of
     CGZeroRect(). (syzdek)

#### 0.1   (2012-03-11)
   - Creating first pre-alpha release of BindleKit Framework. (syzdek)
