@@ -74,6 +74,8 @@
 		A09BD78E17541795007D4B38 /* BKLogger.h in Headers */ = {isa = PBXBuildFile; fileRef = A09BD78B17541795007D4B38 /* BKLogger.h */; };
 		A09BD78F17541795007D4B38 /* BKLogger.m in Sources */ = {isa = PBXBuildFile; fileRef = A09BD78C17541795007D4B38 /* BKLogger.m */; };
 		A09BD79017541795007D4B38 /* BKLogger.m in Sources */ = {isa = PBXBuildFile; fileRef = A09BD78C17541795007D4B38 /* BKLogger.m */; };
+		A09BD7981754B5D1007D4B38 /* BKLoggerController.h in Headers */ = {isa = PBXBuildFile; fileRef = A09BD7961754B5D1007D4B38 /* BKLoggerController.h */; };
+		A09BD7991754B5D1007D4B38 /* BKLoggerController.m in Sources */ = {isa = PBXBuildFile; fileRef = A09BD7971754B5D1007D4B38 /* BKLoggerController.m */; };
 		A0A7D51414B5B140007B2D14 /* BKDevice.h in Headers */ = {isa = PBXBuildFile; fileRef = A0A7D51214B5B140007B2D14 /* BKDevice.h */; };
 		A0A7D51514B5B140007B2D14 /* BKDevice.m in Sources */ = {isa = PBXBuildFile; fileRef = A0A7D51314B5B140007B2D14 /* BKDevice.m */; };
 		A0BF01B3157ACD7400CF7690 /* BKPosixRegex.h in Headers */ = {isa = PBXBuildFile; fileRef = A0BF01B1157ACD7400CF7690 /* BKPosixRegex.h */; };
@@ -180,6 +182,8 @@
 		A092A665141706B40033C972 /* BKNode.m */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.objc; path = BKNode.m; sourceTree = "<group>"; };
 		A09BD78B17541795007D4B38 /* BKLogger.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; path = BKLogger.h; sourceTree = "<group>"; };
 		A09BD78C17541795007D4B38 /* BKLogger.m */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.objc; path = BKLogger.m; sourceTree = "<group>"; };
+		A09BD7961754B5D1007D4B38 /* BKLoggerController.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; path = BKLoggerController.h; sourceTree = "<group>"; };
+		A09BD7971754B5D1007D4B38 /* BKLoggerController.m */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.objc; path = BKLoggerController.m; sourceTree = "<group>"; };
 		A0A7D51214B5B140007B2D14 /* BKDevice.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; path = BKDevice.h; sourceTree = "<group>"; };
 		A0A7D51314B5B140007B2D14 /* BKDevice.m */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.objc; path = BKDevice.m; sourceTree = "<group>"; };
 		A0BF01B1157ACD7400CF7690 /* BKPosixRegex.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; path = BKPosixRegex.h; sourceTree = "<group>"; };
@@ -326,6 +330,8 @@
 				A0A7D51314B5B140007B2D14 /* BKDevice.m */,
 				A0C431BF150B8A6B000047D0 /* BKListController.h */,
 				A0C431C0150B8A6B000047D0 /* BKListController.m */,
+				A09BD7961754B5D1007D4B38 /* BKLoggerController.h */,
+				A09BD7971754B5D1007D4B38 /* BKLoggerController.m */,
 				A0FCC9C014E2913F001A0644 /* BKPackageController.h */,
 				A0FCC9C114E2913F001A0644 /* BKPackageController.m */,
 				A064D971140E053200255FD3 /* BKSelectionController.h */,
@@ -435,6 +441,7 @@
 				A073B463157F178C00F30BAB /* BKPosixRegmatch.h in Headers */,
 				A024C24D15A3B52500D8E38A /* BKNetworkReachabilityResolver.h in Headers */,
 				A09BD78D17541795007D4B38 /* BKLogger.h in Headers */,
+				A09BD7981754B5D1007D4B38 /* BKLoggerController.h in Headers */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
@@ -608,6 +615,7 @@
 				A073B465157F178C00F30BAB /* BKPosixRegmatch.m in Sources */,
 				A024C24F15A3B52500D8E38A /* BKNetworkReachabilityResolver.m in Sources */,
 				A09BD78F17541795007D4B38 /* BKLogger.m in Sources */,
+				A09BD7991754B5D1007D4B38 /* BKLoggerController.m in Sources */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
